--- a/style.css
+++ b/style.css
@@ -1,6 +1,17 @@
 body {
-  background-color: lightblue;
+  background-color: pink;
 }
 p {
-  color: purple;
+    font-size: 15px;
+    font-family: helvetica;
+    font-style: italic;
+  color: orange;
+}
+div {
+  background-color: blue;
+  border: solid red 5px;
+  border-radius: 50%;
+  height: 100px;
+  width: 200px;
+  margin: 200px;
 }
